--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -50,7 +50,9 @@
   <!-- <script src="/js/iconfont.js"></script> -->
   <link rel="stylesheet" type="text/css" href="/css/monokai_sublime.min.css">  
   <script src="/js/highlight.js"></script>  
-  <script >hljs.initHighlightingOnLoad();</script>   
+  <script>
+    hljs.initHighlightingOnLoad()
+  </script>   
   <script src="/js/jquery-2.1.0.min.js"></script>
   <script src="/js/swiper-bundle.min.js"></script>
   <script type="text/javascript" src="/js/sakura-app.js"></script>
