add tip tag 试图修复代码刷新高亮不了的bug

--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -36,6 +36,7 @@
   <link rel="dns-prefetch" href="https://cdn.bootcss.com">
   <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
   <link rel="stylesheet" id="saukra_css-css" href="/css/style.css" type="text/css" media="all">
+  <link rel="stylesheet" id="saukra_css-css" href="/css/tips.css" type="text/css" media="all">
   <link rel="stylesheet" href="/css/lib.min.css" media="all">
   <!-- <link rel="stylesheet" href="/css/font.css" media="all"> -->
   <link rel="stylesheet" href="/css/iconfont.css" media="all">
