--- a/themes/Sakura/layout/_widget/common-article.ejs
+++ b/themes/Sakura/layout/_widget/common-article.ejs
@@ -4,6 +4,7 @@
 <!-- 这样非首页也会加载post_top.js很拖时间，有时间再改 -->
 
 <script>
+  // 初始化设置url
   var localurl = window.location.href.split('#')[0]
   var a = document.getElementById('my_local_url')
   if (a != null) {
