--- a/themes/Sakura/layout/links.ejs
+++ b/themes/Sakura/layout/links.ejs
@@ -16,12 +16,15 @@
 </div>
 <div id="content" class="site-content">
   <article class="post-item post-301 page type-page status-publish has-post-thumbnail hentry">
-    <p style="font-size: 13px">
-      加友链：
+    <!-- <p style="font-size: 20px;font-family:sans-serif;">
+      加友链请注明：
+      <br>
       site-url:
-      avatar: 
+      <br>
+      avatar:
+      <br> 
       (des:)
-    </p>
+    </p> -->
     <% if (page.links) { %>
       <div class="links">
         <% (page.links||[]).forEach(function (group, index) { %>
