--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -9,6 +9,7 @@
 <script src="/js/highlight.js"></script>  
 <script>
   hljs.initHighlightingOnLoad()
+  console.log('加载了highlightjs')
 </script> 
 
 <script src="/js/botui.js"></script>
