--- a/themes/Sakura/source/css/style.css
+++ b/themes/Sakura/source/css/style.css
@@ -2613,7 +2613,7 @@ canvas:not(#ribbon-canvas), #web_bg {
     color: #ff6d6d
 }
 
-.entry-content code {
+/* .entry-content code {
     background: rgba(254, 250, 199, 1);
     color: #e67474;
     word-break: break-word;
@@ -2621,7 +2621,7 @@ canvas:not(#ribbon-canvas), #web_bg {
     padding: 2px;
     text-shadow: none;
     border-radius: 5px
-}
+} */
 
 .entry-content a {
     color: #e67474;
@@ -5675,14 +5675,14 @@ i.iconfont.down {
         position: absolute;
         width: 30px;
         height: 3px;
-        background-color: #a59797;
+        background: linear-gradient(to right,#bc50e7,#e7e412d5,#bc50e7);  
         top: 24px;
         left: 10px
     }
     
     .openNav .icon:before, .openNav .icon:after {
         transition-duration: .5s;
-        background-color: #a59797;
+        background: linear-gradient(to right,#bc50e7,#e7e412d5,#bc50e7);  
         position: absolute;
         content: "";
         width: 30px;
@@ -5703,7 +5703,7 @@ i.iconfont.down {
     }
     
     .openNav.open .icon {
-        background-color: transparent
+        background: transparent
     }
     
     .openNav.open .icon:before,
@@ -8326,11 +8326,11 @@ code[class*="language-"], pre[class*="language-"] {
     color:#fff;
     word-break:break-word;
     font-family:'Source Code Pro',monospace,Helvetica,Tahoma,Arial,STXihei,"STHeiti Light","Microsoft YaHei",sans-serif;
+    font-size: 1em;
     padding:2px;
     padding-left: 20px;
     text-shadow:none;
     border-radius:0 0 5px 5px;
-    /* cursor:url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/texto.cur), */
     cursor:url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/normal.cur),
     auto
 }
@@ -8466,7 +8466,8 @@ code[class*="language-"], pre[class*="language-"] {
     255,
     .1)
 }
-.code-block-fullscreen {
+
+.code-block-fullscreen { 
     position:fixed;
     top:0;
     left:0;
