gitee挂了紧急修改改部分图片

--- a/themes/Sakura/layout/tags.ejs
+++ b/themes/Sakura/layout/tags.ejs
@@ -47,7 +47,7 @@
     <!-- author-profile -->
     <div class="essaySuffix-box">
       <div class="essaySuffix-box-left"><img
-          src="https://gitee.com/dummerchen/MY_IMAGE_BED/raw/master/20201018134428.jpg" alt="">
+          src="https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210224002318.jpg" alt="">
       </div>
       <div class="essaySuffix-box-right" style="margin: 20px;"">
         <span class=" essaySuffix-right-title">本站作者</span>：
