--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -6,11 +6,11 @@
 <script type="text/javascript" src="/js/sakura-app.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/artitalk"></script>
 <script src="/js/twikoo.0.6.0.all.min.js"></script>
-<script src="/js/highlight.js"></script>  
+<!-- <script src="/js/highlight.js"></script>  
 <script>
   hljs.initHighlightingOnLoad()
   console.log('加载了highlightjs')
-</script> 
+</script>  -->
 
 <script src="/js/botui.js"></script>
 <!-- 不蒜子 网页计数器 -->
