--- a/themes/Sakura/layout/_widget/common-article.ejs
+++ b/themes/Sakura/layout/_widget/common-article.ejs
@@ -187,7 +187,9 @@
                           </div>
                           <% } %>
       </section>
+      <% if(page.comments) {%>
       <%- partial('_partial/comment') %>
+      <% } %>
     </main><!-- #main -->
   </div><!-- #primary -->
 </div>
