--- a/themes/Sakura/source/css/tocbot.css
+++ b/themes/Sakura/source/css/tocbot.css
@@ -1,1 +1,79 @@
-.toc{overflow-y:auto}.toc>.toc-list{overflow:hidden;position:relative}.toc>.toc-list li{list-style:none}.toc-list{margin:0;padding-left:10px}a.toc-link{color:currentColor;height:100%}.is-collapsible{max-height:1000px;overflow:hidden;transition:all 300ms ease-in-out}.is-collapsed{max-height:0}.is-position-fixed{position:fixed !important;top:0}.is-active-link{font-weight:700}.toc-link::before{background-color:#EEE;content:' ';display:inline-block;height:inherit;left:0;margin-top:-1px;position:absolute;width:2px}.is-active-link::before{background-color:#54BC4B}
+.toc {
+    width: 270px;
+    height: auto;
+    z-index: 98;
+    transform: translateX(0);
+    right: 0px;
+    top:10px;
+    position: absolute;
+    background-color: #fff !important;
+    border-radius: 3px;
+	padding: 5px;
+    max-height: 70vh;
+	overflow-y: auto;
+}
+
+.toc-fixed {
+    position: fixed !important;
+    top: 60px;
+}
+
+.toc>.toc-list {
+    text-shadow: 0 0 black;
+    overflow:hidden;
+    position:relative;
+}
+
+.toc > .toc-list li {
+	padding: 3px 3px 3px 10px;
+	list-style: none;
+}
+.toc-list {
+	margin: 0;
+	padding-left: 10px;
+}
+a.toc-link {
+	color: #555;
+	font-weight: 700;
+	height: 100%;
+}
+a.toc-link:hover{
+    color: rgba(255, 166, 0);
+}
+
+.is-collapsible {
+	max-height: 1000px;
+	overflow: hidden;
+	transition: all 300ms ease-in-out;
+}
+.is-collapsed {
+	max-height: 0;
+}
+.is-position-fixed {
+	position: fixed !important;
+	top: 0;
+}
+.is-active-link {
+	color: #807dd4 !important;
+}
+
+.is-active-link::before {
+	content: " ";
+	display: inline-block;
+	height: 30px;
+	left: 0;
+	margin-top: -1px;
+	position: absolute;
+	border-left: 3px solid #807dd4;
+}
+
+.is-active-link::after {
+	content: " ";
+	display: inline-block;
+	left: 0;
+	margin-top: -1px;
+	position: absolute;
+	width: 270px;
+	height: 30px;
+	background: rgb(80 80 80 / 8%);
+}
