--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -179,7 +179,7 @@
 <script src="/js/cursor.js"></script>
 <style>
   .bg-canvas{
-    background: url(https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201221160708.jpg) center center / cover no-repeat;;
+    background: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/themebg/base.jpg) center center / cover no-repeat;;
     /* background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%; */
