--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -47,12 +47,14 @@
   <link rel="stylesheet" type="text/css" href="/css/sharejs.css">
   <link rel="stylesheet" type="text/css" href="/css/swiper-bundle.min.css">
   <link rel="stylesheet" type="text/css" href="/css/myswiper.css">
+  <link rel="stylesheet" type="text/css" href="/css/volantisTab.css">
   <!-- 暂时不想重新写icon -->
   <!-- <script src="/js/iconfont.js"></script> -->
   <link rel="stylesheet" type="text/css" href="/css/styles/monokai-sublime.css">  
     
   <script src="/js/jquery-2.1.0.min.js"></script>
   <script src="/js/swiper-bundle.min.js"></script>
+  <script src="/js/volantisTab.js"></script>
   <script type="text/javascript" src="/js/sakura-app.js"></script>
   <script>
     /*Initial Variables*/
