--- a/themes/butterfly/layout/page.pug
+++ b/themes/butterfly/layout/page.pug
@@ -9,6 +9,8 @@ block content
         include includes/page/flink.pug
       when 'categories'
         include includes/page/categories.pug
+      when 'shuoshuo'
+        include includes/page/shuoshuo.pug
       default
         include includes/page/default-page.pug
 
