--- a/themes/butterfly/source/css/_custom/iconfont.styl
+++ b/themes/butterfly/source/css/_custom/iconfont.styl
@@ -1,4 +1,15 @@
 @import url("//at.alicdn.com/t/font_2264842_3izu8i5eoc2.css")
+
+#switchUser svg,
+#pubShuo svg,
+#pubComment svg,
+#uploadSource svg
+  width 1.2em!important
+  height 1.2em!important
+  vertical-align 0!important
+
+.shuoshuo_time span svg
+  display: none !important
 svg
   &.icon
     width 1em
