--- a/themes/butterfly/layout/includes/widget/index.pug
+++ b/themes/butterfly/layout/includes/widget/index.pug
@@ -11,7 +11,7 @@
         if showToc
           include ./card_post_toc.pug
         !=partial('includes/widget/card_clock', {}, {cache: true})
-        !=partial('includes/widget/card_shuo', {}, {cache: true})
+        //- !=partial('includes/widget/card_shuo', {}, {cache: true})
         !=partial('includes/widget/card_recent_post', {}, {cache: true})
         !=partial('includes/widget/card_ad', {}, {cache: true})
   else
@@ -20,7 +20,7 @@
     !=partial('includes/widget/card_announcement', {}, {cache: true})
     .sticky_layout
       !=partial('includes/widget/card_clock', {}, {cache: true})
-      !=partial('includes/widget/card_shuo', {}, {cache: true})
+      //- !=partial('includes/widget/card_shuo', {}, {cache: true})
       !=partial('includes/widget/card_recent_post', {}, {cache: true})
       !=partial('includes/widget/card_ad', {}, {cache: true})
       !=partial('includes/widget/card_newest_comment', {}, {cache: true})
