--- a/themes/butterfly/source/css/_layout/head.styl
+++ b/themes/butterfly/source/css/_layout/head.styl
@@ -1,6 +1,7 @@
 #page-header
   position: relative
   width: 100%
+  height: 100vh
   background-color: #fff0
   background-position: center center
   background-size: cover
@@ -70,14 +71,15 @@
 
   // page
   &.not-home-page
-    height: 20rem
+    height: 100vh
 
     +maxWidth768()
       height: 14rem
 
   #page-site-info
     position: absolute
-    top: 10rem
+    // top: 10rem
+    bottom: 40vh
     padding: 0 .5rem
     width: 100%
 
