--- a/themes/butterfly/source/css/_highlight/highlight/diff.styl
+++ b/themes/butterfly/source/css/_highlight/highlight/diff.styl
@@ -1,7 +1,7 @@
 figure.highlight
   table
     &::-webkit-scrollbar-thumb
-      background: var(--hlscrollbar-bg)
+      background: var(--hlscrollbar-bg) !important
 
   pre .deletion
     color: $highlight-deletion
