--- a/themes/butterfly/source/css/_highlight/highlight/index.styl
+++ b/themes/butterfly/source/css/_highlight/highlight/index.styl
@@ -18,7 +18,7 @@ if $highlight_theme != false
         background-color: $highlight-selection
 
     table
-      display: block
+      // display: block
       overflow: auto
       border: none
 
@@ -37,3 +37,4 @@ if $highlight_theme != false
       padding-right: .5rem
       padding-left: .5rem
       width: 100%
+      max-height: 70vh
