--- a/themes/butterfly/source/css/var.styl
+++ b/themes/butterfly/source/css/var.styl
@@ -62,8 +62,9 @@ $sidebar-background = #f6f8fa
 $sidebar-width = 300px
 // aside
 $toc-link-color = #666261
+$toc-bgcolor=#d0cfc973
 $toc-mobile-width = 300px
-$toc-active-color = #fff
+$toc-active-color = #807dd4 !important
 // Button
 $button-color = #fff
 $button-hover-color = $themeColorEnable && hexo-config('theme_color.button_hover') ? convert(hexo-config('theme_color.button_hover')) : $light-orange
