--- a/themes/butterfly/source/css/_custom/custom.styl
+++ b/themes/butterfly/source/css/_custom/custom.styl
@@ -107,6 +107,7 @@
 
 h1#site-title
   font-family 'Candyhome'
+  font-style: italic
   font-size 3em!important
   white-space:pre
 a.categoryBar-list-link,
@@ -182,32 +183,66 @@ i
     auto
 
 // 滚动条
-::-webkit-scrollbar
-  width 8px
-  height 8px
+// ::-webkit-scrollbar
+//   width 8px
+//   height 8px
+//   background-color: #eee
 
-::-webkit-scrollbar-track
-  background-color rgba(73, 177, 245, 0.2)
-  border-radius 2em
+// ::-webkit-scrollbar-track
+//   background-color #eee
+//   border-radius 2em
 
-::-webkit-scrollbar-thumb
-  background-color #49b1f5
-  background-image -webkit-linear-gradient(45deg,
-    rgba(255, 255, 255, 0.4) 25%,
-    transparent 25%,
-    transparent 50%,
-    rgba(255, 255, 255, 0.4) 50%,
-    rgba(255, 255, 255, 0.4) 75%,
-    transparent 75%,
-    transparent)
-  border-radius 2em
+// ::-webkit-scrollbar-thumb
+//   background-color rgb(137, 140, 143)
+//   background-image -webkit-linear-gradient(45deg,
+//     rgba(255, 255, 255, 0.4) 25%,
+//     transparent 25%,
+//     transparent 50%,
+//     rgba(255, 255, 255, 0.4) 50%,
+//     rgba(255, 255, 255, 0.4) 75%,
+//     transparent 75%,
+//     transparent)
+//   border-radius 2em
 
-::-webkit-scrollbar-corner
-  background-color transparent
+// ::-webkit-scrollbar-corner
+//   background-color transparent
 
-::-moz-selection
-  color #fff
-  background-color #49b1f5
+// ::-moz-selection
+//   color #fff
+//   background-color #444
+
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+    background-color: #eee
+}
+::-webkit-scrollbar-track {
+    background-color: #eee
+}
+::-webkit-scrollbar-thumb {
+    background-color: #807dd4
+}
+
+// highlight scroll ball
+.highlight .line span::-moz-selection,.line::-moz-selection {
+    background:#fbfbfbab;
+    color:#21252b
+}
+.highlight .line span::selection,.line::selection {
+    background:#fbfbfbab;
+    color:#21252b
+}
+.highlight .code:::-webkit-scrollbar-thumb  {
+    height:10x !important;
+    width:10x !important;
+    background-color:#1d1f21 !important
+}
+.highlight .code::-webkit-scrollbar-track {
+    -webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.3) !important;
+    border-radius:10px !important;
+    background-color:#21252b !important
+}
+
 
 // diff代码块
 figure
