--- a/themes/butterfly/source/css/_global/index.styl
+++ b/themes/butterfly/source/css/_global/index.styl
@@ -27,6 +27,7 @@
   --blockquote-bg: $blockquote-background-color
   --reward-pop: $reward-pop-up-bg
   --toc-link-color: $toc-link-color
+  --toc-bgcolor: $toc-bgcolor
   --card-box-shadow: 0 3px 8px 6px rgba(7, 17, 27, .06)
   --card-hover-box-shadow: 0 3px 8px 6px rgba(7, 17, 27, .15)
 
