--- a/themes/butterfly/source/css/_layout/aside.styl
+++ b/themes/butterfly/source/css/_layout/aside.styl
@@ -303,12 +303,14 @@
         display: block
         padding-left: .3rem
         border-left: 3px solid transparent
+        font-weight: 600
         color: var(--toc-link-color)
         transition: all .2s ease-in-out
 
         &.active
-          border-left-color: darken($theme-toc-color, 20%)
-          background: $theme-toc-color
+          // border-left-color: darken($theme-toc-color, 20%)
+          border-left-color: #807dd4
+          background: var(--toc-bgcolor)
           color: $toc-active-color
 
       &:before
