--- a/themes/butterfly/source/css/_layout/aside.styl
+++ b/themes/butterfly/source/css/_layout/aside.styl
@@ -165,7 +165,7 @@
 
         & > time,
         & > .name
-          display: block
+          // display: block
           color: $theme-meta-color
           font-size: 85%
 
