--- a/themes/butterfly/source/css/_custom/custom.styl
+++ b/themes/butterfly/source/css/_custom/custom.styl
@@ -137,50 +137,41 @@ h1.post-title
 /* 鼠标指针 */
 body,
 html
-  cursor url('https://cdn.jsdelivr.net/gh/Akilarlxh/Akilarlxh.github.io@v3.3.3_2/img/cur/arrow.cur'),
-    auto !important
+  cursor url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/normal.cur), auto !important
 
 img
-  cursor url('https://cdn.jsdelivr.net/gh/Akilarlxh/Akilarlxh.github.io@v3.3.3_2/img/cur/btn.cur'),
-    auto !important
+  cursor url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/normal.cur), auto !important
 
 a
   &:hover
-    cursor url('https://cdn.jsdelivr.net/gh/Akilarlxh/Akilarlxh.github.io@v3.3.3_2/img/cur/link.cur'),
-    auto
+    cursor url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/work.cur), auto
 
 input
   &:hover
-    cursor url('https://cdn.jsdelivr.net/gh/Akilarlxh/Akilarlxh.github.io@v3.3.3_2/img/cur/input.cur'),
-    auto
+    cursor url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/work.cur), auto
 
 button
   &:hover
-    cursor url('https://cdn.jsdelivr.net/gh/Akilarlxh/Akilarlxh.github.io@v3.3.3_2/img/cur/btn.cur'),
-    auto
+    cursor url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/work.cur), auto
 
 i
   &:hover
-    cursor url('https://cdn.jsdelivr.net/gh/Akilarlxh/Akilarlxh.github.io@v3.3.3_2/img/cur/link.cur'),
-    auto
+    cursor url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/work.cur), auto
 
 #footer-wrap
   a
     &:hover
-      cursor url('https://cdn.jsdelivr.net/gh/Akilarlxh/Akilarlxh.github.io@v3.3.3_2/img/cur/hf.cur'),
-    auto
+      cursor url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/work.cur), auto
 
 #pagination
   .page-number
     &:hover
-      cursor url('https://cdn.jsdelivr.net/gh/Akilarlxh/Akilarlxh.github.io@v3.3.3_2/img/cur/i.cur'),
-    auto
+      cursor url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/work.cur), auto
 
 #nav
   .site-page
     &:hover
-      cursor url('https://cdn.jsdelivr.net/gh/Akilarlxh/Akilarlxh.github.io@v3.3.3_2/img/cur/hf.cur'),
-    auto
+      cursor url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/work.cur), auto
 
 // 滚动条
 // ::-webkit-scrollbar
