--- a/themes/butterfly/source/css/mycss.css
+++ b/themes/butterfly/source/css/mycss.css
@@ -1,3 +1,16 @@
+/* 文章hover修改 */
+
+/* #article-container.post-content h1:hover :before,
+#article-container.post-content h2:hover :before,
+#article-container.post-content h3:hover :before,
+#article-container.post-content h4:hover :before,
+#article-container.post-content h5:hover :before,
+#article-container.post-content h6:hover :before {
+  color: rgba(255, 167, 2, 0.966) !important;
+} */
+
+/* 控制card list 排列 */
+
 #recent-posts{
 	margin-top:-1rem;  /*头部为空时抵消间隔，若有磁贴或日历请注释掉该行*/
 	align-content:flex-start;
@@ -64,4 +77,32 @@ display:none;/*隐藏文章详情*/
 #recent-posts > .recent-post-item {
  width:100%;/*控制手机自适应*/
 }
+}
+
+/* post copyright样式 2 */
+.essaySuffix-box {
+  font-family: Microsoft YaHei, 微软雅黑, MicrosoftJhengHei, 华文细黑, STHeiti, MingLiu;
+  font-size: 14px;
+  background: #f8f9fb !important;
+  margin-top: 50px;
+  padding: 17px;
+  border: 1px solid #edeef2 !important;
+  border-radius: 3px;
+  color: #414857;
+  text-indent: 0;
+}
+.essaySuffix-box-left {
+  width: 15%;
+  float: left;
+}
+.essaySuffix-right-title {
+  font-weight: 700;
+  white-space: nowrap;
+}
+.essaySuffix-box-left img {
+  width: 80%;
+  max-height: 80%;
+  border: 1px solid #ccc;
+  padding: 5px;
+  margin: 0!important;
 }
