--- a/themes/butterfly/layout/includes/header/nav.pug
+++ b/themes/butterfly/layout/includes/header/nav.pug
@@ -16,7 +16,7 @@ nav#nav
       #search-button
         a.site-page.social-icon.search
           i.fas.fa-search.fa-fw
-          span=' '+_p('search')
+          span=' '+_p('搜索')
     !=partial('includes/header/menu_item', {}, {cache: true})
 
     #toggle-menu
