--- a/themes/butterfly/source/css/_custom/custom.styl
+++ b/themes/butterfly/source/css/_custom/custom.styl
@@ -29,10 +29,13 @@
 //   background transparent
 /* twikoo评论框高度 */
 .tk-input[data-v-619b4c52]
+  .el-textarea
+    background-color: white
   .el-textarea__inner
-    height 130px!important
-    &:focus
-      background-image: none !important
+    height 200px!important
+    background-size: contain
+    // &:focus
+      // background-image: none !important
 
 /*页脚copyright文字图标对齐*/
 .copyright
