--- a/themes/butterfly/source/css/_global/index.styl
+++ b/themes/butterfly/source/css/_global/index.styl
@@ -46,7 +46,7 @@ body
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 
   if !hexo-config('copy.enable')
-    user-select: none
+    user-select: text
 
 *::-webkit-scrollbar
   width: 8px
