--- a/themes/butterfly/source/css/_highlight/highlight.styl
+++ b/themes/butterfly/source/css/_highlight/highlight.styl
@@ -133,7 +133,7 @@ blockquote
       text-transform: uppercase
       font-weight: bold
       font-size: 1.15em
-      user-select: none
+      user-select: text
 
     .copy-notice
       position: absolute
@@ -151,7 +151,7 @@ blockquote
         color: $theme-color
 
   .gutter
-    user-select: none
+    user-select: text
 
   .gist table
     width: auto
