--- a/themes/butterfly/source/css/_highlight/prismjs/line-number.styl
+++ b/themes/butterfly/source/css/_highlight/prismjs/line-number.styl
@@ -26,7 +26,7 @@
         letter-spacing: -1px
         font-size: 100%
         pointer-events: none
-        user-select: none
+        user-select: text
 
         & > span
           display: block
